<resources>
    <string name="app_name">CA</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="multimedia">Multimedia</string>
    <string name="matches">Matches</string>
    <string name="table">Table</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="songs">Songs</string>
    <string name="football">Football</string>
    <string name="handball">Handball</string>
    <string name="basketball">Basketball</string>
    <string name="others">Others</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_string" translatable="false">Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et scelerisque risus ante eu sem.</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="view_all_videos">View All Videos</string>
    <string name="view_all_news">View All News</string>
    <string name="view_full_table">View Full Table</string>
    <string name="latest_news">Latest News</string>
    <string name="league_table">League Table</string>
    <string name="clarets_player_hd">Clarets Player HD</string>
    <string name="unknown_error">Unknown Error occurred, Restart App!</string>
    <string name="group_a">Group A</string>
    <string name="group_b">Group B</string>
    <string name="no_data">No data found!</string>
    <string name="notifications">Notifications</string>

    //Test

    <!--<string name="adMobApplicationId" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="adMobInterstitialAddId" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adMobBannerAddId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->


    //Real

    <string name="adMobApplicationId" translatable="false">ca-app-pub-6263044097299250~9608707229</string>
    <string name="adMobInterstitialAddId" translatable="false">ca-app-pub-6263044097299250/2249586794</string>
    <string name="adMobBannerAddId" translatable="false">ca-app-pub-6263044097299250/8072759116</string>
    <string name="adMobNewsBannerAdId" translatable="false">ca-app-pub-6263044097299250/7703548860</string>
    <string name="adMobNewsListAdId" translatable="false">ca-app-pub-6263044097299250/4283178607</string>
</resources>